# voting

./: .env.example  .gitignore  README.md  build_and_deploy.sh
client/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  vite.config.ts
client/public/: .htaccess
client/src/: App.tsx  index.css  routes.ts
client/src/components/: Button.tsx  ConfirmDialog.tsx  Dialog.tsx  Page.tsx  QrCode.tsx  Slot.tsx  Theme.tsx
client/src/contexts/: AuthenticationContext.tsx
client/src/data/: api.ts  types.ts
client/src/pages/: AuthenticationPage.tsx  CreatePollPage.tsx  HomePage.tsx  ManagePollPage.tsx  PollDetailPage.tsx  SharePollPage.tsx
client/src/utils/: classnames.ts  mergeEventHandlers.ts  mergeProps.ts  queryClient.ts
server/: .gitignore  app.py  migrate.py  project.yml  pyproject.toml  users.json
server/src/: __main__.py  users.json
